<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Apache License
  ~  *
  ~  * Copyright [2017] Sinyuk
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *     http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/status_bar_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_height"
            android:background="?android:colorPrimary"
            android:orientation="horizontal"
            android:transitionName="@string/transition_toolbar">

            <ImageView
                android:id="@+id/navBack"
                style="@style/action_button"
                android:contentDescription="@string/action_back"
                android:src="@drawable/ic_back"
                android:transitionName="@string/transition_toolbar_button_1" />


            <TextView
                style="@style/toolbarTitle.Linear"
                android:text="@string/label_status"
                android:transitionName="@string/transition_toolbar_title" />

            <ImageView
                android:id="@+id/menuButton"
                style="@style/action_button"
                android:contentDescription="@string/action_back"
                android:src="@drawable/ic_back"
                android:transitionName="@string/transition_toolbar_button_2" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_size"
            android:layout_gravity="bottom"
            android:background="@color/divider_color" />

    </FrameLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:overScrollMode="never">

        <com.sinyuk.fanfou.ui.BetterViewAnimator
            android:id="@+id/viewAnimator"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/coordinator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/status_view_header" />

                <FrameLayout
                    android:id="@+id/contextTimelineContainer"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/mentionLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.sinyuk.fanfou.ui.BetterViewAnimator>
    </android.support.v4.widget.NestedScrollView>

    <include layout="@layout/status_view_footer" />

    <LinearLayout
        android:id="@+id/panelRootContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <include layout="@layout/status_view_reply_actionbar" />

        <cn.dreamtobe.kpswitch.widget.KPSwitchPanelLinearLayout
            android:id="@+id/panelRoot"
            android:layout_width="match_parent"
            android:layout_height="@dimen/keyboard_panel_height"
            android:orientation="vertical" />
    </LinearLayout>

</LinearLayout>
