<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Apache License
  ~  *
  ~  * Copyright [2017] Sinyuk
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *     http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="100dp"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/status_bar_height"
        android:padding="@dimen/gap_16">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/avatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_avatar_placeholder"
            android:scaleType="centerCrop"
            app:riv_border_width="1dp"
            app:riv_corner_radius="24dp"
            tools:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/screenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/avatar"
            android:layout_marginTop="@dimen/gap_4"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textColor="?android:textColorPrimary"
            android:textSize="@dimen/text_16"
            android:textStyle="bold"
            tools:text="Sinyuk" />

        <TextView
            android:id="@+id/userId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/screenName"
            android:layout_marginTop="@dimen/gap_2"
            android:ellipsize="end"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textColor="?android:textColorSecondary"
            android:textSize="@dimen/text_12"
            tools:text="\~@dasdhjsaj" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userId"
            android:layout_marginTop="@dimen/gap_16"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/friendCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/gap_8"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/text_12"
                android:textStyle="bold"
                tools:text="121242" />

            <com.sinyuk.fanfou.ui.ClickableTextView
                android:id="@+id/friendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/gap_8"
                android:text="@string/name_following"
                android:textColor="@color/text_click_secondary_primary"
                android:textSize="@dimen/text_12" />


            <TextView
                android:id="@+id/followerCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/gap_8"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/text_12"
                android:textStyle="bold"
                tools:text="121242" />

            <com.sinyuk.fanfou.ui.ClickableTextView
                android:id="@+id/followerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_follower"
                android:textColor="@color/text_click_secondary_primary"
                android:textSize="@dimen/text_12" />

        </LinearLayout>
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/gap_8"
            android:paddingTop="@dimen/gap_8">

            <com.sinyuk.fanfou.ui.ClickableTextView
                android:id="@+id/mineButton"
                style="@style/drawer_menu_item"
                android:layout_marginBottom="@dimen/gap_8"
                android:drawableStart="@drawable/ic_mine"
                android:text="@string/name_profile" />

            <com.sinyuk.fanfou.ui.ClickableTextView
                android:id="@+id/draftButton"
                style="@style/drawer_menu_item"
                android:layout_marginBottom="@dimen/gap_8"
                android:drawableStart="@drawable/ic_draft"
                android:text="@string/name_draft" />

            <com.sinyuk.fanfou.ui.ClickableTextView
                android:id="@+id/settingsButton"
                style="@style/drawer_menu_item"
                android:layout_marginBottom="@dimen/gap_8"
                android:drawableStart="@drawable/ic_settings"
                android:text="@string/name_settings" />


            <com.sinyuk.fanfou.ui.ClickableTextView
                android:id="@+id/helpButton"
                style="@style/drawer_menu_item"
                android:layout_marginBottom="@dimen/gap_8"
                android:layout_marginTop="@dimen/gap_8"
                android:text="@string/name_help" />


            <com.sinyuk.fanfou.ui.ClickableTextView
                android:id="@+id/aboutButton"
                style="@style/drawer_menu_item"
                android:text="@string/name_about" />
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gap_16"
        android:layout_marginTop="@dimen/gap_16"
        android:orientation="vertical"
        android:paddingEnd="6dp"
        android:paddingStart="6dp">

        <ImageView
            android:id="@+id/nightModeButton"
            style="@style/action_button"
            android:contentDescription="@string/name_night_mode"
            android:src="@drawable/ic_night" />

        <ImageView
            android:id="@+id/logoutButton"
            style="@style/action_button"
            android:layout_gravity="end"
            android:contentDescription="@string/action_logout"
            android:src="@drawable/ic_shutdown" />

    </FrameLayout>
</LinearLayout>