<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Apache License
  ~  *
  ~  * Copyright [2017] Sinyuk
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *     http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/name_picture"
        android:scaleType="centerCrop"
        app:riv_corner_radius="@dimen/picture_corner_radius_large"
        tools:src="@drawable/sample" />

    <ImageView
        android:id="@+id/deleteButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end"
        android:layout_margin="4dp"
        android:background="@drawable/picture_button_bg"
        android:contentDescription="@string/action_delete"
        android:padding="4dp"
        android:src="@drawable/ic_close" />

    <ImageView
        android:id="@+id/editButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="4dp"
        android:background="@drawable/picture_button_bg"
        android:contentDescription="@string/name_edit"
        android:padding="4dp"
        android:src="@drawable/ic_brush" />
</FrameLayout>