<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Apache License
  ~  *
  ~  * Copyright [2017] Sinyuk
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *     http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~  */
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground">

    <FrameLayout
        android:id="@+id/historyViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/status_bar_height"
            app:contentInsetStart="0dp"
            app:layout_scrollFlags="scroll|snap|enterAlways">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/action_bar_height"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/navBack"
                    style="@style/action_button"
                    android:contentDescription="@string/action_back"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/label_search_history"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="@dimen/text_14"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/deleteButton"
                    style="@style/action_textbutton"
                    android:contentDescription="@string/action_delete_all"
                    android:text="@string/action_clear"
                    android:textColor="?android:colorAccent"
                    android:textSize="@dimen/text_14" />

            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>